<resources>
    <string name="app_name">Magkraft</string>

    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="hello_nsign_in">Hello\nSign in!</string>
    <string name="email">UserName</string>
    <string name="enter_email">Enter UserName</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="readyForScan">Ready For Scan</string>
    <string name="alignFace">Align your face inside the oval</string>
    <string name="groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>