<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maroon_black_gradient_bg"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginMain">


        <TextView
            android:id="@+id/titleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="@string/hello_nsign_in"
            android:textColor="@color/white"
            android:paddingVertical="@dimen/_20sdp"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/base_layout_bg"
            android:orientation="vertical"
            android:padding="@dimen/_25sdp"
            app:layout_constraintTop_toBottomOf="@id/titleTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/email"
                android:textColor="@color/pink_color"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/hint_gray"
                app:boxBackgroundMode="filled"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/hint_gray"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/hint_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:background="@null"
                    android:maxLength="40"
                    style="@style/styleTextInputEditText"
                    android:fontFamily="sans-serif"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/password"
                android:textColor="@color/pink_color"
                android:textSize="@dimen/_14ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/hint_gray"
                app:boxBackgroundMode="filled"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/hint_gray"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/hint_gray"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:background="@null"
                    android:maxLength="40"
                    style="@style/styleTextInputEditText"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:fontFamily="sans-serif-light"-->
<!--                android:textSize="@dimen/_11ssp"-->
<!--                android:text="@string/don_t_have_account"-->
<!--                android:textColor="@color/light_gray" />-->
<!--            <TextView-->
<!--                android:id="@+id/registerTV"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:fontFamily="sans-serif-medium"-->
<!--                android:text="@string/register"-->
<!--                android:layout_marginTop="@dimen/_2sdp"-->
<!--                android:textSize="@dimen/_13ssp"-->
<!--                android:textColor="@color/black" />-->

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>